# optimizer

./: CMakeLists.txt  flake.nix  pyproject.toml  setup.py
onnxoptimizer/: cpp2py_export.cc  optimize.cc  optimize.h  pass.cc  pass_manager.cc  pass_manager.h  pass_registry.h
onnxoptimizer/passes/: adjust_add.h  pass_util.h
